@@ -86,7 +86,7 @@ LilyPond 2.4 requires the <tt>ec-fonts-mftraced</tt> package from
     <td>
       Woody
     </td>
-    <td><strong>go <a href="http://tac.ki.iif.hu/lilypond.html">here</a></strong>
+    <td><strong>Go <a href="http://tac.ki.iif.hu/lilypond.html">here</a></strong>
     </td>
     <td>2.4.6</td>
     <td><a href="mailto:wferiATafavant.elte.hu">Ferenc Wagner</a></td>
@@ -396,6 +396,20 @@ href="http://www.cups.org/articles.php?L236">Ghostscript</a>.
   </tr>
 
   <tr>
+    <td><p align="center"><img src="@IMAGES@windows.png"></p></td>
+    <td>MS Windows</td>
+    <td>
+      <!--  Curr--> 
+    </td>
+    <td>
+      <strong>Download the installer <a href=" http://lilypond.org/mingw/setup.exe">here</a></strong>
+    </td>
+    <td>2.5.25</td>
+    <td><a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a></td>
+    </td>
+  </tr>
+
+  <tr>
     <td></td>
     <td>Source</td>
     <td></td>
@@ -405,11 +419,8 @@ href="http://www.cups.org/articles.php?L236">Ghostscript</a>.
 	(<a href="../devel/#warning">warning</a>)
       </strong>
     </td>
-    <td>
-      2.5.25
-    </td>
-    <td><a href="mailto:bug-lilypond@gnu.org">LilyPond development
-	team</a></td>
+    <td>2.5.25</td>
+    <td><a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a></td>
   </tr>
 
   
@@ -468,7 +479,7 @@ href="http://www.cups.org/articles.php?L236">Ghostscript</a>.
     <td>
       Woody
     </td>
-    <td><strong>go <a href="http://afavant.elte.hu/~wferi/lilypond/">here</a></strong>
+    <td><strong>Go <a href="http://afavant.elte.hu/~wferi/lilypond/">here</a></strong>
     </td>
     <td>2.2.5</td>
     <td><a href="mailto:wferiATafavant.elte.hu">Ferenc Wagner</a></td>
