@@ -1,3 +1,8 @@
+2005-05-25  Pedro Kroger  <kroeger@pedrokroeger.net>
+
+	* site/install/index.html (href): fixed case in "go here". Added
+	mingw installer for windows.
+
 2005-05-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* site/install/slackware.html (Module): remove.
